// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should become Open after click 1`] = `
<div>
  <button
    class="button"
    type="button"
  >
    Close
  </button>
</div>
`;

exports[`should become Open after click 2`] = `
<div>
  <button
    class="buttonReverse"
    type="button"
  >
    Open
  </button>
</div>
`;

exports[`should become Open after click 3`] = `
<div>
  <button
    class="button"
    type="button"
  >
    Close
  </button>
</div>
`;
